Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,12 @@ steps:
     publishWebProjects: true
     zipAfterPublish: false
  
-- task: DotNetCoreCLI@2
+ 
+- task: AzureRmWebAppDeployment@4
   inputs:
-    command: 'publish'
-    publishWebProjects: true
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Concierge Subscription(34a2652f-71cb-417e-9f46-6f2ea784b496)'
+    WebAppName: 'devoptest'
+    Package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    ResourceGroupName: 'learn-d96b97c5-56db-43cc-9244-0ddc7b0de71b'
+    SlotName: 'production'
