Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,4 +44,4 @@ steps:
   inputs:
     buildType: 'current'
     downloadType: 'single'
-    downloadPath: '$(System.ArtifactsDirectory)'
+    downloadPath: '$(build.artifactStagingDirectory)'
