--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,34 +1,7 @@
-trigger:
-- main
-
-pool:
-  vmImage: 'ubuntu-latest'
-
-steps:
-- task: UseDotNet@2
+- task: AzureWebApp@1
   inputs:
-    packageType: 'sdk'
-    version: '6.x.x'
-    installationPath: $(Agent.ToolsDirectory)/dotnet
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'restore'
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    projects: '**/*.csproj'
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'publish'
-    publishWebProjects: true
-    arguments: '--configuration Release --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: false
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    pathToPublish: '$(Build.ArtifactStagingDirectory)'
-    artifactName: 'PartyInvites'
-    publishLocation: 'Container'
+    azureSubscription: 'Azure subscription 1(288bf2a2-a366-4ff9-a639-8d96a2ef3886)'
+    appType: 'webApp'
+    appName: 'webcoba'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
