--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,46 @@
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: 'Azure subscription 1(288bf2a2-a366-4ff9-a639-8d96a2ef3886)'
-    appType: 'webApp'
-    appName: 'webcoba'
-    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
-    deploymentMethod: 'auto'
+trigger:
+- main
+
+pool:
+  vmImage: 'windows-latest'
+
+jobs:
+- job: BuildAndDeploy
+  steps:
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '6.x'
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'restore'
+      projects: '**/*.csproj'
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'build'
+      projects: '**/*.csproj'
+      arguments: '--configuration Release'
+
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'publish'
+      projects: '**/*.csproj'
+      publishWebProjects: true
+      arguments: '--configuration Release --output $(Build.ArtifactStagingDirectory)'
+      zipAfterPublish: true
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
+
+  - task: AzureWebApp@1
+    inputs:
+      azureSubscription: 'Azure subscription 1(288bf2a2-a366-4ff9-a639-8d96a2ef3886)'
+      appType: 'webApp'
+      appName: 'webcoba'
+      package: '$(System.DefaultWorkingDirectory)/drop/**/*.zip'
+      deploymentMethod: 'auto'
