--- a/.github/workflows/master_partyinvites20241105083153.yml
+++ b/.github/workflows/master_partyinvites20241105083153.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    working-directory: ./PartyInvites 
     steps:
       - uses: actions/checkout@v4
 
