--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -1,7 +1,13 @@
+name: Build and Deploy PartyInvites
+
+on:
+  push:
+    branches: [ "main" ] # Trigger on pushes to the "main" branch
+
 jobs:
   build-and-deploy:
     runs-on: windows-latest
-    working-directory: ./PartyInvites  # Add this line
+    working-directory: ./PartyInvites
     steps:
       - uses: actions/checkout@v4
 
