--- a/.github/workflows/master_partyinvites20241105083153.yml
+++ b/.github/workflows/master_partyinvites20241105083153.yml
@@ -1,6 +1,13 @@
+name: Build and Deploy PartyInvites
+
+on:
+  push:
+    branches: [ "main" ] # Trigger on pushes to the "main" branch
+
 jobs:
   build-and-deploy:
     runs-on: windows-latest
+    working-directory: ./PartyInvites
     steps:
       - uses: actions/checkout@v4
 
