--- a/.github/workflows/master_partyinvites20241105083153.yml
+++ b/.github/workflows/master_partyinvites20241105083153.yml
@@ -30,7 +30,7 @@ jobs:
     name: Build and Deploy
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: mhost52/azuretest@master
     
     - name: Setup .NET Core SDK ${{ env.NETCORE_VERSION }}
       uses: actions/setup-dotnet@v1
