--- a/.github/workflows/master_partyinvites20241105083153.yml
+++ b/.github/workflows/master_partyinvites20241105083153.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           dotnet-version: ${{ env.NETCORE_VERSION }}
       
+      - name: Navigate to project directory
+        run: cd PartyInvites
+
       - name: Restore packages
         run: dotnet restore
 
