--- a/.github/workflows/master_partyinvites20241105083153.yml
+++ b/.github/workflows/master_partyinvites20241105083153.yml
@@ -26,20 +26,21 @@ jobs:
         with:
           dotnet-version: ${{ env.NETCORE_VERSION }}
       
-      - name: Navigate to project directory
-        run: cd PartyInvites
-
       - name: Restore packages
         run: dotnet restore
+        working-directory: PartyInvites
 
       - name: Build app
         run: dotnet build --configuration Release --no-restore
+        working-directory: PartyInvites
 
       - name: Test app
         run: dotnet test --no-build
+        working-directory: PartyInvites
 
       - name: Publish app for deploy
         run: dotnet publish --configuration Release --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        working-directory: PartyInvites
 
       - name: Run custom Azure action
         uses: mhost52/azuretest@master
