--- a/.github/workflows/master_partyinvites20241105083153.yml
+++ b/.github/workflows/master_partyinvites20241105083153.yml
@@ -13,6 +13,7 @@ env:
   AZURE_WEBAPP_NAME: aspnet-core-sample-deploy
   AZURE_WEBAPP_PACKAGE_PATH: './published'
   NETCORE_VERSION: '6.*.*'
+  AZURE_WEBAPP_PUBLISH_PROFILE: '<publishData><publishProfile profileName="webcoba - Web Deploy" publishMethod="MSDeploy" publishUrl="webcoba-hpbxftfmhubcd9by.scm.canadacentral-01.azurewebsites.net:443" msdeploySite="webcoba" userName="$webcoba" userPWD="GuZif7EaguD32avcs06Gl9nqQhjjJfoiBawrGsxramyqXx9SZ45Chmdjigd3" destinationAppUrl="https://webcoba-hpbxftfmhubcd9by.canadacentral-01.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="webcoba - FTP" publishMethod="FTP" publishUrl="ftps://waws-prod-yt1-079.ftp.azurewebsites.windows.net/site/wwwroot" ftpPassiveMode="True" userName="webcoba\$webcoba" userPWD="GuZif7EaguD32avcs06Gl9nqQhjjJfoiBawrGsxramyqXx9SZ45Chmdjigd3" destinationAppUrl="https://webcoba-hpbxftfmhubcd9by.canadacentral-01.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases /></publishProfile><publishProfile profileName="webcoba - Zip Deploy" publishMethod="ZipDeploy" publishUrl="webcoba-hpbxftfmhubcd9by.scm.canadacentral-01.azurewebsites.net:443" userName="$webcoba" userPWD="GuZif7EaguD32avcs06Gl9nqQhjjJfoiBawrGsxramyqXx9SZ45Chmdjigd3" destinationAppUrl="https://webcoba-hpbxftfmhubcd9by.canadacentral-01.azurewebsites.net" SQLServerDBConnectionString="" mySQLDBConnectionString="" hostingProviderForumLink="" controlPanelLink="https://portal.azure.com" webSystem="WebSites"><databases /></publishProfile></publishData>'
 
 jobs:
   build:
@@ -47,7 +48,7 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
       - name: Publish Artifacts
         uses: actions/upload-artifact@v4.0.0
