--- a/.github/workflows/master_partyinvites20241105083153.yml
+++ b/.github/workflows/master_partyinvites20241105083153.yml
@@ -43,15 +43,18 @@ jobs:
         run: dotnet publish --configuration Release --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         working-directory: PartyInvites
 
+      - name: Verify published directory
+        run: ls -al PartyInvites/${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
       - name: Deploy to Azure Web App
         uses: Azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: PartyInvites/${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
           publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
       - name: Publish Artifacts
         uses: actions/upload-artifact@v4.0.0
         with:
           name: webapp
-          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          path: PartyInvites/${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
